feat:Agregar filtros de transacciones
